added tab for autocomplete. fixed various bugs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head> </head>
-    <body></body>
+
+<head> </head>
+<script>
+  document.onkeydown = function (t) {
+    if (t.which == 9) {
+      return false;
+    }
+  }
+</script>
+
+<body></body>
+
 </html>
